--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         </nav>
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
     </header>    
     <main>
@@ -104,7 +104,12 @@
     </main>
     <!--Подвал-->
     <footer>
-        
+        <a href="./index.html">WebStudio</a>
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
     </footer>
 
 </body>
