--- a/index.html
+++ b/index.html
@@ -25,82 +25,90 @@
     </header>    
     <main>
     <!--Герой-->   
-        <div>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
-            </section>
-        </div>
-        <!--Список "Фишек"-->
-        <ul>
-            <li>
-                <h2>Внимание к деталям</h2>
-                <p>
-                    Идейные соображения, а также начало повседневной работы по формированию позиции.
-                </p>
-            </li>
-            <li>
-                <h2>Пунктуальность</h2>
-                <p>
-                    Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                </p>
-            </li>
-            <li>
-                <h2>Планирование</h2>
-                <p>
-                    Равным образом консультация с широким активом в значительной степени обуславливает.
-                </p>
-            </li>
-            <li>
-                <h2>Современные технологии</h2>
-                <p>
-                    Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                </p>
-            </li>
-        </ul>
-        <!--Список услуг-->
-        <h3>Чем мы занимаемся</h3>
-        <ul>
-            <li>
-                <a href="">
-                    <img src="./images/img1.jpg" alt="Человек за рабочим столом" width="370">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/img2.jpg" alt="Человек со смартфоном в руке" width="370">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/img3.jpg" alt="Человек работает с планшетом" width="370">
-                </a>
-            </li>
-        </ul>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        
+        <!--Список преимуществ-->
+        <section>
+            <h2>Наши преимущества</h2>
+            <!-- Это логический заголовок, которого нет на макете.
+            Позже он будет скрыт при помощи CSS -->
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>
+                        Идейные соображения, а также начало повседневной работы по формированию позиции.
+                    </p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>
+                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                    </p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>
+                        Равным образом консультация с широким активом в значительной степени обуславливает.
+                    </p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>
+                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                    </p>
+                </li>
+            </ul>
+        </section>    
+            <!--Список услуг-->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="./images/img1.jpg" alt="Человек за рабочим столом" width="370">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/img2.jpg" alt="Человек со смартфоном в руке" width="370">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/img3.jpg" alt="Человек работает с планшетом" width="370">
+                    </a>
+                </li>
+            </ul>
+        </section>    
         <!--Команда-->
-        <h3>Наша команда</h3>
-        <ul>
-            <li>
-                <img src="./images/igor.jpg" alt="Член команды" width="270">
-                <h4>Игорь Демьяненко</h4>
-                <p lang="en">Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/olga.jpg" alt="Член команды" width="270">
-                <h4>Ольга Репина</h4>
-                <p lang="en">Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/nikolai.jpg" alt="Член команды" width="270">
-                <h4>Николай Тарасов</h4>
-                <p lang="en">Marketing</p>
-            </li>
-            <li>
-                <img src="./images/mikhail.jpg" alt="Член команды" width="270">
-                <h4>Михаил Ермаков</h4>
-                <p lang="en">UI Designer</p>
-            </li>
-        </ul>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/igor.jpg" alt="Член команды" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/olga.jpg" alt="Член команды" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/nikolai.jpg" alt="Член команды" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/mikhail.jpg" alt="Член команды" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <!--Подвал-->
     <footer>
