--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
-        
         <!--Список преимуществ-->
         <section>
-            <h2>Наши преимущества</h2>
             <!-- Это логический заголовок, которого нет на макете.
             Позже он будет скрыт при помощи CSS -->
+            <h2>Наши преимущества</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -68,17 +67,17 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="./images/img1.jpg" alt="Человек за рабочим столом" width="370">
+                        <img src="./images/img1.jpg" alt="Человек за рабочим столом" width="370" height="294">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/img2.jpg" alt="Человек со смартфоном в руке" width="370">
+                        <img src="./images/img2.jpg" alt="Человек со смартфоном в руке" width="370" height="294">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/img3.jpg" alt="Человек работает с планшетом" width="370">
+                        <img src="./images/img3.jpg" alt="Человек работает с планшетом" width="370" height="294">
                     </a>
                 </li>
             </ul>
@@ -88,22 +87,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/igor.jpg" alt="Член команды" width="270">
+                    <img src="./images/igor.jpg" alt="Член команды" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/olga.jpg" alt="Член команды" width="270">
+                    <img src="./images/olga.jpg" alt="Член команды" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/nikolai.jpg" alt="Член команды" width="270">
+                    <img src="./images/nikolai.jpg" alt="Член команды" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/mikhail.jpg" alt="Член команды" width="270">
+                    <img src="./images/mikhail.jpg" alt="Член команды" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
